crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_off_canvas_paths__remove_off_canvas_paths-2.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_off_canvas_paths.rs
expression: "test_config(r#\"{ \"removeOffCanvasPaths\": true }\"#,\nSome(r#\"<svg height=\"1000\" width=\"1000\" xmlns=\"http://www.w3.org/2000/svg\">\n    <path d=\"M10 10 h 80 v 80 h -80 z\"/>\n    <path d=\"M10 -90 h 80 v 80 h -80 z\"/>\n    <path d=\"M110 10 h 80 v 80 h -80 z\"/>\n    <path d=\"M10 110 h 80 v 80 h -80 z\"/>\n    <path d=\"M-90 10 h 80 v 80 h -80 z\"/>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" height="1000" width="1000">
    <path d="M10 10h80v80h-80Z"/>
    <path d="M110 10h80v80h-80Z"/>
    <path d="M10 110h80v80h-80Z"/>
</svg>
