crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_off_canvas_paths__remove_off_canvas_paths-6.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_off_canvas_paths.rs
expression: "test_config(r#\"{ \"removeOffCanvasPaths\": true }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <path d=\"M10 10 h 80 v 80 h -80 z\"/>\n    <path d=\"M10 -90 h 80 v 80 h -80 z\"/>\n    <path d=\"M110 10 h 80 v 80 h -80 z\"/>\n    <path d=\"M10 110 h 80 v 80 h -80 z\"/>\n    <path d=\"M-90 10 h 80 v 80 h -80 z\"/>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <path d="M10 10h80v80h-80Z"/>
    <path d="M10-90h80v80h-80Z"/>
    <path d="M110 10h80v80h-80Z"/>
    <path d="M10 110h80v80h-80Z"/>
    <path d="M-90 10h80v80h-80Z"/>
</svg>
